--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,8 @@ repositories {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    compile 'com.google.inject:guice:4.2.2'
+    compile 'com.google.inject.extensions:guice-assistedinject:4.2.2'
 }
 
 application {
